# skart

./: .appveyor.yml  .gitignore  .gitmodules  .travis.init  .travis.script  .travis.yml  .vimrc  CMakeLists.txt  Doxyfile.in  IDEAS.md  Makefile.in  README.md  TextureFragmentShader.glsl  appveyor.yml  bootstrap  configure  f_input.h  fedCommon.h  fedGl.c  fedGl.h  fedInput.h  fedShader.h  ground-normal.tga  main.c  untitled.blend
code/: ex0.c  ex0.h  ex1.c  ex1.h  ex2.c  ex2.h  ex3.c  ex3.h  fGl.h  fInput.h  fedCommon.h  fedGl.c  fedInput.c  fedInput.h  fedShader.c  fed_gl.c  fed_gl.h  fed_input.c  fed_input.h  fed_log.c  fed_log.h  fed_math.c  fed_math.h  fed_math2.c  fed_math2.h  fed_screen.c  fed_shader.c  fed_shader.h  fed_utils.c  fed_utils.h  federation.c  federation.h  inputs.h  main.c  obj.h  screen.h  server.c  shaders.h  sounds.h
code/client/: f_gl.h  f_input.h  f_main.c  f_shader.h  f_sounds.h  fedGl.c  fedShader.c  main.c
code/server/: fsrv.c
data/shaders/: SimpleTransform.vertexshader  SingleColor.fragmentshader  fedFragmentShader.glsm  fedVertexShader.glsm
material/shaders/: TextureFragmentShader.glsl  TransformVertexShader.glsl
scenes/cube/: ground-color.tga
shaders/: TextureFragmentShader.glsl  shaderVertex.glsl
tests/: minunit.h  test_fed_math.c
